cmake_minimum_required(VERSION 3.13)
project(C_Language C)

set(CMAKE_C_STANDARD 11)

#add_executable(main main.c)
#
#add_executable(C_Fig-1-5 Fig-1-5.c)
#add_executable(C_Fig-1-6 Fig-1-6.c)
#
#add_executable(Fig-2-1 Fig-2-1.c)
#add_executable(Fig-2-6 Fig-2-6.c)
#add_executable(Fig-2-8 Fig-2-8.c)
#add_executable(Fig-2-10 Fig-2-10.c)
#
#
#add_executable(Fig-3-10 Fig-3-10.c)
#add_executable(Fig-3-14 Fig-3-14.c)
#add_executable(Fig-3-15 Fig-3-15.c)

#add_executable(Fig-4-3 Fig-4-3.c)
#add_executable(Fig-4-4 Fig-4-4.c)
#add_executable(Fig-4-6 Fig-4-6.c)
#add_executable(Fig-4-8 Fig-4-8.c)
#add_executable(Fig-4-10 Fig-4-10.c)
#add_executable(Fig-4-13 Fig-4-13.c)

#add_executable(Fig-5-5 Fig-5-5.c)
#add_executable(Fig-5-8 Fig-5-8.c)
#add_executable(Fig-5-10 Fig-5-10.c)
#add_executable(Fig-5-11 Fig-5-11.c)
#add_executable(Fig-5-12 Fig-5-12.c)

#add_executable(Fig-6-4 Fig-6-4.c)
#add_executable(Fig-6-7 Fig-6-7.c)
#add_executable(Fig-6-9 Fig-6-9.c)
#add_executable(Fig-6-10 Fig-6-10.c)
#add_executable(Fig-6-11 Fig-6-11.c)
#add_executable(Fig-6-15 Fig-6-15.c)
#add_executable(Fig-6-17 Fig-6-17.c)
#add_executable(Fig-6-18 Fig-6-18.c)

#add_executable(Fig-7-2 Fig-7-1.c Fig-7-2.c)
#add_executable(Fig-7-3 Fig-7-3.c)
#add_executable(Fig-7-9 Fig-7-9.c Fig-7-8.c)
#add_executable(Fig-7-11 Fig-7-10.c Fig-7-11.c)
#add_executable(Fig-7-14 Fig-7-13.c Fig-7-14.c)
#add_executable(Fig-7-17 Fig-7-16.c Fig-7-17.c)
#add_executable(Fig-7-19 Fig-7-18.c Fig-7-19.c)
#add_executable(Fig-7-21 Fig-7-20.c Fig-7-21.c)
add_executable(boxmuller box-muller.c)
add_executable(randomBM randomBM.c)